[package]
name = "kv_store"
version = "0.1.0"
edition = "2024"

[dependencies]
# our core engine tools
memmap2 = "0.9"
zerocopy = { version = "0.7", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"

# the networking stack (Stage 4)
tokio = { version = "1", features = ["full"] }
bytes = "1.5"

# observability (making it look professional)
tracing = "0.1"
tracing-subscriber = "0.3"